Add new wizard "New Item"
This wizard supports the user to create a new item in a very basic
way.

--- a/bundles/designer/org.openhab.designer.ui/plugin.xml
+++ b/bundles/designer/org.openhab.designer.ui/plugin.xml
@@ -191,5 +191,15 @@
          </enablement>
       </actionProvider>
    </extension>
+   <extension
+      point="org.eclipse.ui.newWizards">
+      <wizard
+         name="Item"
+         class="org.openhab.designer.ui.wizards.newitem.NewItemWizard"
+         id="org.openhab.designer.ui.wizards.newitem.NewItemWizard"
+         icon="icons/items.png"
+         category="org.eclipse.ui.Basic">
+      </wizard>
+   </extension>
 
 </plugin>
